# OpenMysteryToolkit

./: .gitignore  CMakeLists.txt  OpenMysteryToolkit.sln  README.MD
OpenMysteryToolkit/: Monster.cpp  Monster.h  OpenMysteryToolkit.vcxproj  OpenMysteryToolkit.vcxproj.filters  Player.cpp  StdAfx.h
cmake/: omt_dependences.cmake  package_info.cmake
include/: GamePlayer.h  Main.h  Monster.h  Player.h
src/: GamePlayer.cpp  Main.cpp  Monster.cpp  Player.cpp  StdAfx.h
src/abstract/: IDb.h  ISystem.h
src/components/: contact.h  container.h  controllable.h  monster.h  motion.h  paralysis.h  poison.h  showable.h  sleep.h  spawn.h  stackable.h  statsmod.h  tag.h  talkable.h  transform.h  updatable.h
src/db/: abilitydb.cpp  abilitydb.h  attributedb.h  gameinfo.cpp  gameinfo.h  loader.h  mapdb.h  monsterdb.cpp  monsterdb.h
src/def/: ability.h  curve.h  cycleinfo.h  defaults.h  deftable.h  direction.h  gender.h  item.h  monsterinfo.h  scriptactivation.h  spawninfo.h  stats.h  statuslink.h
src/game/: db.h  ecs.cpp  ecs.h  game.cpp  game.h  main.cpp  main.h  python.h  vari.h
src/python/: inc.h  link.h  modules.h  omt.cpp  omt.h
src/python/classes/: entity.cpp  entity.h  map.cpp  map.h  monster.cpp  monster.h  player.cpp  player.h
src/python/modules/: constants.cpp  entity.cpp  flags.cpp  log.cpp  switches.cpp  system.cpp
src/systems/: collision.cpp  collision.h  motion.cpp  motion.h  spawn.cpp  spawn.h  stats.cpp  stats.h  updatable.cpp  updatable.h
